--- a/part1/index.html
+++ b/part1/index.html
@@ -1,22 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>GitHub Pages Test</title>
+  <title>Quote generator homework</title>
   <style>
     body {
       font-family: sans-serif;
-      background-color: #f2f2f2;
-      text-align: center;
-      padding-top: 100px;
+      padding: 2em;
+      background-color: #f0f0f0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
-    h1 {
-      color: #4CAF50;
+
+    #quoteBox {
+      background: #fff;
+      padding: 1em;
+      border-radius: 8px;
+      margin-bottom: 1em;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    button {
+      padding: 0.5em 1em;
+      font-size: 1rem;
+    }
+
+    footer {
+      margin-top: auto;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #555;
+      padding-top: 2em;
     }
   </style>
 </head>
+
 <body>
-  <h1>GitHub Pages is Working!</h1>
-  <p>If you can see this page, your GitHub Pages setup is correct.</p>
+
+  <h1>Quote generator homework</h1>
+  <h2>Create by Gift sensei </h2> <!-- Change XXXX to your name and student ID-->
+
+  <div id="quoteBox">
+    <p id="quote">Click the button to get a quote!</p>
+    <p id="author"></p>
+  </div>
+
+  <button id="newQuoteBtn">New Quote</button>
+
+  <footer>
+    Web Design and Programming — Shibaura Institute of Technology — Spring 2025
+  </footer>
+
+  <script>
+    const quoteText = document.getElementById("quote");
+    const authorText = document.getElementById("author");
+    const newQuoteBtn = document.getElementById("newQuoteBtn");
+
+    function getQuote() {
+     
+      //INPUT YOUR CODE HERE
+      //HINT: Use fetch() to get quote from "quotes.json"
+
+
+    }
+    newQuoteBtn.addEventListener("click", getQuote);
+    getQuote(); // Load a quote on page load
+  </script>
+
 </body>
+
 </html>
