--- a/part2/index.html
+++ b/part2/index.html
@@ -55,7 +55,7 @@
     <div id="question-count">Question 1 of 30</div>
     <div id="question">Question will appear here</div>
     <div id="options"></div>
-    <button id="nextBtn">Next</button>
+    <button id="nextBtn" type="button">Next</button>
     <div id="result"></div>
   </div>
 
